k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labpng
  namespace: labpng
spec:
  selector:
    app: labpng
  ports:
    - port: 8000
      targetPort: 8000
