k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labpng
  namespace: labpng
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: labpng.alalfy.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: labpng
                port:
                  number: 8000
